--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.1",
     "phaser": "^2.4.6",
+    "phaser-tiled": "^2.0.1",
     "promise": "^7.1.1"
   },
   "devDependencies": {
