--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "browser-pack": "^6.0.1",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
+    "chokidar": "^1.4.3",
     "dateformat": "^1.0.12",
     "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
     "gulp-connect": "^3.2.2",
     "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "gulp.spritesmith": "^6.2.1",
+    "layout": "^2.2.0",
     "merge": "^1.2.0",
+    "merge-stream": "^1.0.0",
     "minifyify": "^7.3.2",
     "mkdirp": "^0.5.1",
     "watchify": "^3.7.0"
