--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "description": "A shapeshifting game of fun!",
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.1",
     "promise": "^7.1.1"
